test/files/neg/t6048.check
t6048.scala:3: warning: unreachable code
    case _ if false => x // unreachable
                       ^
t6048.scala:8: warning: unreachable code
    case _ if false => x // unreachable
                       ^
t6048.scala:13: warning: patterns after a variable pattern cannot match (SLS 8.1.1)
    case _ => x
         ^
t6048.scala:14: warning: unreachable code due to variable pattern on line 13
    case 5 if true  => x // unreachable
                       ^
t6048.scala:14: warning: unreachable code
    case 5 if true  => x // unreachable
                       ^
error: No warnings can be incurred under -Xfatal-warnings.
5 warnings found
one error found
